# tree-harness

./: .env.example  .gitignore  README.md  pyproject.toml  run_20ep.py  run_5ep_verify.py  run_mini_swe_e2e.py  run_multi_episode.py  run_swebench_tree.py
docs/: DESIGN.md  DEVELOPMENT_SPEC.md  related-work-survey.md  system-health-analysis.md
docs/product-review/: 2026-06-24-phase0-1-review.md  README.md
docs/specs/: cambium_engine.md  cell_model.md  connector.md  context_injector.md  decay_sentinel.md  dedup.md  energy_system.md  experiment.md  kuzu_backend.md  lignification.md  metrics.md  mini_swe_inner.md  oplog.md  outer_harness.md  ring_promotion.md  runner.md  sqlite_backend.md  trajectory_adapter.md  tree_store.md  verifiers.md
src/tree_harness/: __init__.py
src/tree_harness/adapters/: __init__.py  mini_swe_inner.py  trajectory_adapter.py
src/tree_harness/core/: __init__.py  cell_model.py  embedding.py  llm_client.py  oplog.py
src/tree_harness/modules/: __init__.py  cambium_engine.py  connector.py  context_injector.py  decay_sentinel.py  dedup.py  energy_system.py  lignification.py  metrics.py  runner.py  (+3 more)
tests/: test_cambium_engine.py  test_cell_model.py  test_connector.py  test_context_injector.py  test_decay_sentinel.py  test_dedup.py  test_energy_system.py  test_integration.py  test_kuzu_backend.py  test_lignification.py  test_llm_client.py  test_metrics.py  test_mini_swe_inner.py  test_oplog.py  test_outer_harness.py  test_ring_promotion.py  test_runner.py  test_simulation_100ep.py  test_sqlite_backend.py  test_tree_store.py  test_verifiers.py
(+4 files in other folders)
