[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-harness"
version = "0.1.0"
description = "Tree Harness: project-level cognitive middleware for coding agents"
requires-python = ">=3.9"
dependencies = [
    "kuzu>=0.4",
    "sqlite-vec>=0.1.6",
    "numpy>=1.24",
    "sentence-transformers>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"
